# HATs

./: .gitignore  Docker-output  Dockerfile  README.md  benchmarks  dune-project  meta-config.json
ast/: ast.ml  constant.ml  corelang.ml  dune  pmop.ml  qualifier.ml  rty.ml  structure.ml  termlang.ml  type_dec.ml  typectx.ml  typed.ml
auxtyping/: alpha.ml  aux.ml  auxtyping.ml  branching.ml  concat.ml  decide_ret.ml  dune  dune.bak  fexists.ml  finalize.ml  fmerge.ml  purify.ml  retilize.ml  simp.ml
coersion/: coersion.ml  coersion_algebraic.ml  coersion_aux.ml  coersion_cty.ml  coersion_lit.ml  coersion_ltlf.ml  coersion_qualifier.ml  coersion_rty.ml  coersion_se.ml  coersion_srl.ml  coersion_structure.ml  coersion_termlang.ml  dune
data/: benchmark.json
data/parse/: eff.ml
data/parsing/: test1.ml  test2.ml  test3.ml
data/predefined/: builtin_automata_pred_typing.ml  builtin_axioms.ml  builtin_coverage_typing.ml  builtin_eff_typing.ml  builtin_libfunc_typing.ml  builtin_normal_typing.ml  builtin_pure_typing.ml  builtin_randomness_coverage_typing.ml  normal_typing.mli  qualifier_builtin_type.ml
data/ri/: mcp.sh
desymbolic/: desymbolic.ml  dune  dune.bak  head.ml
desymbolic_opt/: desymbolic_opt.ml  dune  head.ml
dtree/: FastDT.ml  data  dt.ml  dune
env/: dune  env.ml  load_env.ml  stat.ml
example/: .#compress.ml  compress.ml  insert.md  preorder.ml
formalization/: .gitignore  Atom.v  BasicTyping.v  BasicTypingProp.v  CoreLang.v  CoreLangProp.v  Denotation.v  Equation.v  Instantiation.v  InstantiationProp.v  ListCtx.v  Makefile  NamelessTactics.v  OperationalSemantics.v  Qualifier.v  RDInv2.v  README.md  RefinementType.v  Substitution.v  Tactics.v  Trace.v  Typing.v  _CoqProject
frontend/: aux.ml  dune  dune.bak  to_algebraic.ml  to_axiom.ml  to_const.ml  to_cty.ml  to_expr.ml  to_id.ml  to_lit.ml  to_ltlf.ml  to_ltlf_hty.ml  to_op.ml  to_pat.ml  to_pred.ml  to_qualifier.ml  to_rty.ml  to_se.ml  to_srl.ml  to_structure.ml  to_type_dec.ml  typectx.ml
interpreter/: dune  eval.ml  eval_ectx.ml  result.ml
language/: constant.ml  corelang.ml  dune  language.ml  termlang.ml  to_typed.ml  to_typed_rty.ml  ty.ml  typed.ml
minterm/: dune  minterm.ml
normalization/: .#fallback.ml  denormalize.ml  dune  normalize.ml
ntypecheck/: .#to_typed.ml  aux.ml  ctycheck.ml  dune  ntypecheck.ml  qualifiercheck.ml  rtycheck.ml  secheck.ml  srlcheck.ml  to_typed.ml  ttypecheck.ml
regquery/: check.ml  dune
scripts/: analyze.py  benchs.py  colored.py  comprehensive.py  iter_benchs.py  marple_interface.py  mk_md_table.py  mk_table.py  mk_tex_table.py  run.py  run_datatype.py  test_parsing.py
smtquery/: check.ml  dune  dune.bak  litencoding.ml  propencoding.ml  regencoding.ml  smtquery.ml  z3aux.ml  z3reg.ml
subtyping/: dune  dune.bak  sub.ml  subcty.ml  subtyping.ml  undersub.ml
syntax/: algebraic.ml  axiom.ml  common.ml  constant.ml  corelang.ml  cty.ml  dune  id.ml  lit.ml  ltlf.ml  ltlf_rty.ml  minterm.ml  nregex.ml  op.ml  pred.ml  qn.ml  qualifier.ml  rty.ml  rty_tree.ml  sev.ml  sevent.ml  sfa.ml  srl.ml  structure.ml  syntax.ml  termlang.ml  type_dec.ml  typectx.ml  typed.ml
test/: Uniq.v  dune  test.ml
typecheck/: baux.ml  bidirectional.ml  dune  dune.bak  elim_ghost.ml  fexists.ml  fmerge.ml  infer_ghost.ml  typecheck.ml  typeinfer.ml
(+402 files in other folders)
