(env
 (dev
  (flags (:standard -w -32-35-27-33-26-64)))
 (release
  (flags (:standard -w -32-35-27-33-26-64))
  (ocamlopt_flags (:standard -unsafe -noassert -inline 100))))

(library
 (name env)
 (wrapped false)
 (modules
   env
   stat
 )
 (libraries core language_utils)
 (preprocess (pps ppx_inline_test ppx_assert ppx_optcomp ppx_compare ppx_sexp_conv))
 (inline_tests)
)
