(library
 (name frontend)
 (wrapped false)
 (libraries syntax core env)
 (modules
   aux
   to_id
   to_op
   to_const
   to_pat
   to_expr
   to_lit
   to_qualifier
   to_se
   to_srl
   to_ltlf
   to_cty
   to_ltlf_hty
   to_rty
   to_type_dec
   to_structure
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert))
 (inline_tests)
)
