(library
 (name syntax)
 (wrapped false)
 (modules
   id
   constant
   op
   termlang
   corelang
   lit
   pred
   qualifier
   rty
   algebraic
   type_dec
   typectx
   structure
   syntax
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
 (libraries zzdatatype utils normal5ty env)
)
