(library
 (name syntax)
 (wrapped false)
 (modules
   common
   constant
   op
   termlang
   corelang
   lit
   qualifier
   axiom
   cty
   sevent
   sfa
   srl
   ltlf
   rty_tree
   rty
   ; ltlf_rty
   type_dec
   typectx
   structure
   minterm
   nregex
   qn
   syntax
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
 (libraries env)
)
